--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
 	"rules": {
 		"prettier/prettier": ["error", {}, { "usePrettierrc": true }],
 		"react/react-in-jsx-scope": "off",
+		"react/prop-types": "off",
 		"simple-import-sort/sort": "error",
 		"jsx-a11y/anchor-is-valid": [
 			"error",
