--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 	"dependencies": {
 		"next": "9.5.2",
 		"react": "16.13.1",
-		"react-dom": "16.13.1",
-		"save-dev": "0.0.1-security"
+		"react-dom": "16.13.1"
 	},
 	"devDependencies": {
 		"eslint": "^7.7.0",
