--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
 		"eslint-plugin-react": "^7.20.6",
 		"eslint-plugin-react-hooks": "^4.1.0",
 		"eslint-plugin-simple-import-sort": "^5.0.3",
+		"husky": "^4.2.5",
 		"prettier": "^2.0.5"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run lint && npm run format"
+		}
 	}
 }
