add dynamic routing and posts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write '**/*.{js, jsx, css, md, json}'"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
