--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": ["eslint --quiet --fix"],
+    "*.{js,md}": ["prettier --write"]
   }
 }
