--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "rss": "^1.2.2"
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
